--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Uzayan</string>
     <string name="app_icon_description">App Icon</string>
     <string name="no_connection">No Connection</string>
+    <string name="alw_media_sessions">Media Sessions</string>
+    <string name="alw_notifications">Notifications</string>
+    <string name="alw_notification_transfer">Notification Transfer</string>
+    <string name="alw_file_transfer">File Transfer</string>
+    <string name="alw_image_transfer">Image Transfer</string>
 </resources>
