--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="cs_waiting_client">Waiting For Client</string>
     <string name="connection_secure">Connection is secure</string>
     <string name="connection_not_secure">Connection is not secure</string>
+    <string name="remote_commands">Remote Commands</string>
+    <string name="send_command">Send Commands</string>
 </resources>
