--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="connection_not_secure">Connection is not secure</string>
     <string name="remote_commands">Remote Commands</string>
     <string name="send_command">Send Commands</string>
+    <string name="title_activity_screen_cast">Screen Cast Activity</string>
+    <string name="screencast">Screencast</string>
 </resources>
